--- a/templater_modules/lpcandy/style/style.css
+++ b/templater_modules/lpcandy/style/style.css
@@ -2773,7 +2773,7 @@
     overflow: hidden;
     padding: 0;
 }
-.gallery_5 .item_list .slider_wrap .slider_list .slider .item_block {
+.gallery_5 .item_list .slider .item_block {
     height: 255px;
 	position: relative;
     text-align: center;
