--- a/templater_modules/lpcandy/lib/bxSlider/jquery.bxslider.css
+++ b/templater_modules/lpcandy/lib/bxSlider/jquery.bxslider.css
@@ -33,8 +33,8 @@
 	-moz-box-shadow: 0 0 5px #ccc;
 	-webkit-box-shadow: 0 0 5px #ccc;
 	box-shadow: 0 0 5px #ccc;
-	border:  5px solid #fff;
-	left: -5px;
+	border:  10px solid #fff;
+	/*left: -5px;*/
 	background: #fff;
 	
 	/*fix other elements on the page moving (on Chrome)*/
@@ -104,12 +104,12 @@
 /* DIRECTION CONTROLS (NEXT / PREV) */
 
 .bx-wrapper .bx-prev {
-	left: 10px;
+	left: 20px;
 	background: url(images/controls.png) no-repeat 0 -32px;
 }
 
 .bx-wrapper .bx-next {
-	right: 10px;
+	right: 20px;
 	background: url(images/controls.png) no-repeat -43px -32px;
 }
 
@@ -120,7 +120,14 @@
 .bx-wrapper .bx-next:hover {
 	background-position: -43px 0;
 }
-
+@media all and (max-width: 1199px) {
+    .bx-wrapper .bx-next {
+        right: 13px;
+    }
+    .bx-wrapper .bx-prev {
+        left: 13px;
+    }
+}
 .bx-wrapper .bx-controls-direction a {
 	position: absolute;
 	top: 50%;
@@ -129,7 +136,7 @@
 	width: 32px;
 	height: 32px;
 	text-indent: -9999px;
-	z-index: 9999;
+	z-index: 999;
 }
 
 .bx-wrapper .bx-controls-direction a.disabled {
