--- a/templater_modules/lpcandy/style/style.css
+++ b/templater_modules/lpcandy/style/style.css
@@ -35,6 +35,10 @@
   min-height: 5px;
 }
 
+.container-fluid {
+    border-bottom: 1px solid #e0e0e0;
+}
+
 /* form */
 * {
   box-sizing: border-box;
@@ -407,6 +411,8 @@
   height: 55px;
   margin: 0 auto;
   width: 55px;
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 .header_4 .container .ico_wrap .ico_name {
@@ -1252,6 +1258,7 @@
   background-size: 40px;
   background-position: center center;
   position: relative;
+  z-index: 10;
   overflow: hidden;
 }
 
@@ -1402,7 +1409,7 @@
 }
 
 .benefits_3 .item_list .item .ico {
-  position: absolute !important;
+  position: absolute;
   top: 37px;
   left: -90px;
   width: 65px;
@@ -1414,8 +1421,8 @@
   background-repeat: no-repeat;
   background-size: 40px;
   background-position: center center;
-  position: relative;
   overflow: hidden;
+  z-index: 10;
 }
 
 .benefits_3 .item_list .item .name {
@@ -1495,6 +1502,7 @@
   background-position: center center;
   position: relative;
   overflow: hidden;
+  z-index: 10;
 }
 
 .benefits_4 .item_list .item .image_wrap {
@@ -1575,6 +1583,7 @@
   background-position: center center;
   position: relative;
   overflow: hidden;
+  z-index: 10;
 }
 
 .benefits_5 .item_list.hide_border .item .img {
@@ -2361,11 +2370,10 @@
 /* gallery */
 .gallery .container {
   margin-top: 0px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   margin-left: auto !important;
   margin-right: auto !important;
   padding: 0px;
-  border-bottom: 1px solid #E0E0E0;
   padding: 25px 0px 15px;
   font-family: Arial;
 }
@@ -2722,13 +2730,13 @@
     margin: 45px 30px 0;
     padding-bottom: 50px;
 }
-.gallery_5 .item_list .bxslider {
+.gallery_5 .item_list .slider {
     list-style-type: none;
     margin: 0;
     overflow: hidden;
     padding: 0;
 }
-.gallery_5 .item_list .bxslider .item_block {
+.gallery_5 .item_list .slider .item_block {
 	position: relative;
     text-align: center;
 }
@@ -2741,11 +2749,11 @@
 .gallery_5 .item_list .item_block .big_img {
     cursor: default;
 }
-.gallery_5 .item_list .bxslider .preview_img {
+.gallery_5 .item_list .slider .preview_img {
     height: 250px;
     overflow: hidden;
 }
-.gallery_5 .item_list .bxslider .overlay {
+.gallery_5 .item_list .slider .overlay {
     background-color: rgba(0, 0, 0, 0.5);
     height: 100%;
     left: 0;
@@ -2757,26 +2765,26 @@
     width: 100%;
 }
 @media all and (max-width: 1199px) {
-    .gallery_5 .item_list .bxslider .overlay {
+    .gallery_5 .item_list .slider .overlay {
         padding-top: 76px;
     }
-    .gallery_5 .item_list .bxslider .overlay .img_title {
+    .gallery_5 .item_list .slider .overlay .img_title {
         font-size: 15px;
     }
-    .gallery_5 .item_list .bxslider .overlay .img_desc {
+    .gallery_5 .item_list .slider .overlay .img_desc {
         font-size: 12px;
     }
-    .gallery_5 .item_list .bxslider .preview_img {
+    .gallery_5 .item_list .slider .preview_img {
        height: 200px;
     }
-    .gallery_5 .item_list .bxslider .overlay .img_title {
+    .gallery_5 .item_list .slider .overlay .img_title {
         font-size: 16px !important;
     }
-    .gallery_5 .item_list .bxslider .overlay .img_desc {
+    .gallery_5 .item_list .slider .overlay .img_desc {
         font-size: 12px !important;
     }
 }
-.gallery_5 .item_list .bxslider .overlay .img_title {
+.gallery_5 .item_list .slider .overlay .img_title {
     color: #fff;
     font-family: "Open Sans",Arial;
     font-size: 18px;
@@ -2784,20 +2792,20 @@
     text-transform: uppercase;
 	line-height: 150%;
 }
-.gallery_5 .item_list .bxslider .overlay .img_desc {
+.gallery_5 .item_list .slider .overlay .img_desc {
     color: #fff;
     font-family: "Open Sans",Arial;
     font-size: 13px;
     font-weight: 300;
     margin-top: 5px;
 }
-.gallery_5 .item_list .bxslider .item_block:hover .overlay {
+.gallery_5 .item_list .slider .item_block:hover .overlay {
     opacity: 1;
 }
-.gallery_5 .item_list .bxslider .item_block.hide_overlay:hover .overlay {
+.gallery_5 .item_list .slider .item_block.hide_overlay:hover .overlay {
     opacity: 0;
 }
-.gallery_5 .item_list .bxslider .item_block.hide_overlay:hover a.img_big .overlay {
+.gallery_5 .item_list .slider .item_block.hide_overlay:hover a.img_big .overlay {
     opacity: 0.2;
 }
 
@@ -3920,15 +3928,15 @@
 
 
 /* map */
-#map-canvas, #map {
+#map-canvas, .map {
   width: 100%;
   height: 600px;
 }
-#map:before {
+.map:before {
     background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAAECAQAAAAO5iayAAAAFElEQVR4nGNh4GJgYGEQARGyUBYAA7gAYNMlmuUAAAAASUVORK5CYII=");
     bottom: 0;
 }
-.map_block_1 #map:before, .map_block_1 #map:after {
+.map_block_1 .map:before, .map_block_1 .map:after {
     background-repeat: repeat-x;
     content: "";
     display: block;
@@ -3938,11 +3946,11 @@
     width: 100%;
     z-index: 2;
 }
-.map_block_1 #map:after {
+.map_block_1 .map:after {
     background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAAECAQAAAAO5iayAAAAFElEQVR4nGNh8GdgYGF4AyIeQ1kAHEIDG/bSxzYAAAAASUVORK5CYII=");
     top: 0;
 }
-.map_block_1 #map:before, .map_block_1 #map:after {
+.map_block_1 .map:before, .map_block_1 .map:after {
     background-repeat: repeat-x;
     content: "";
     display: block;
@@ -3955,8 +3963,8 @@
 .map_block_1 .container_text .map_overlay {
   position: absolute;
   z-index: 3;
-  top: 50px;
-  right: 10px;
+  top: -560px;
+  right: 200px;
   height: auto;
   width: 320px;
   padding: 0 25px;
