--- a/templater_modules/lpcandy/style/style.css
+++ b/templater_modules/lpcandy/style/style.css
@@ -1258,7 +1258,6 @@
   background-size: 40px;
   background-position: center center;
   position: relative;
-  z-index: 10;
   overflow: hidden;
 }
 
@@ -1422,7 +1421,6 @@
   background-size: 40px;
   background-position: center center;
   overflow: hidden;
-  z-index: 10;
 }
 
 .benefits_3 .item_list .item .name {
@@ -1502,7 +1500,6 @@
   background-position: center center;
   position: relative;
   overflow: hidden;
-  z-index: 10;
 }
 
 .benefits_4 .item_list .item .image_wrap {
@@ -1583,7 +1580,6 @@
   background-position: center center;
   position: relative;
   overflow: hidden;
-  z-index: 10;
 }
 
 .benefits_5 .item_list.hide_border .item .img {
@@ -3930,7 +3926,7 @@
 /* map */
 #map-canvas, .map {
   width: 100%;
-  height: 600px;
+  height: 400px;
 }
 .map:before {
     background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAAECAQAAAAO5iayAAAAFElEQVR4nGNh4GJgYGEQARGyUBYAA7gAYNMlmuUAAAAASUVORK5CYII=");
@@ -3960,46 +3956,39 @@
     width: 100%;
     z-index: 2;
 }
-.map_block_1 .container_text .map_overlay {
+.map_block_1 .container_text{
   position: absolute;
   z-index: 3;
-  top: -560px;
-  right: 200px;
+  top: 35px;
+  right: 50px;
   height: auto;
-  width: 320px;
-  padding: 0 25px;
+  width: 320px;        
   border-radius: 5px;
   border: 1px solid #E0E0E0;
   box-shadow: 0 2px 1px rgba(0, 0, 0, 0.3);
   background-color: rgba(255, 255, 255, 0.85);
   text-align: center;
 }
+.map_block_1 .container_text .item_block {  
+   padding: 0 25px 0;   
+}
+.map_block_1 .container_text .item_block .map_overlay {  
+    border-top: 1px solid #E0E0E0;
+    padding: 25px 0;
+}
+.map_block_1 .container_text .item_block:first-child .map_overlay {
+    border-top: none;
+}
 
-.map_block_1 .container_text .map_overlay .item_block .title {
+.map_block_1 .container_text .item_block .title {  
   font-family: Arial;
   font-size: 20px;
   color: #2B2B2B;
   font-weight: normal;
+  line-height: 120%;
 }
 
-.map_block_1 .container_text .map_overlay .item_block {
-  padding: 25px 0;
-  border-top: 1px solid #E0E0E0;
-}
-
-.map_block_1 .container_text .map_overlay .item_block:first-child {
-  border-top: none;
-}
-
-.map_block_1 .container_text .map_overlay .item_block .title {
-  font-family: Arial;
-  font-size: 20px;
-  color: #2B2B2B;
-  font-weight: normal;
-}
-
-.map_block_1 .container_text .map_overlay .item_block .desc {
-  margin-top: 5px;
+.map_block_1 .container_text .item_block .desc {
   font-family: Arial;
   font-size: 15px;
   line-height: 21px;
